--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,26 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring-webmvc.version}</version>
         </dependency>
+          <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <version>1.3.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>1.3.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>1.3.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>1.3.2.RELEASE</version>
+        </dependency>
         <!-- Spring-orm -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -110,6 +130,11 @@
             <artifactId>spring-security-openid</artifactId>
             <version>${spring-security.version}</version>
         </dependency>
+        <dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-jpa</artifactId>
+		    <version>1.11.7.RELEASE</version>
+		</dependency>
         <!-- End Spring Security -->
         <!-- Hibernate -->
         <dependency>
